[package]
name = "pdrust"
version = "0.1.0"
edition = "2021"
authors = ["Egor Fedorov <fegor2004@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
default-features = true
features = [
  "wayland"
]

[dev-dependencies]
bevy_panorbit_camera="0.9.0"

[profile.dev.package."*"]
opt-level=3

