[package]
name = "pdrust"
version = "0.1.0"
edition = "2021"
authors = ["Egor Fedorov <fegor2004@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
# These are the default features:
# (re-enable whichever you like)

# Bevy functionality:
  "multi-threaded",     # Run with multithreading
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_pbr",           # 3D (physically-based) rendering
  "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "animation",          # Animation support
  "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)
  "default_font",       # Embed a minimal default font for text/UI

  "webgl2",                # Web: use WebGL2 instead of WebGPU
  "wayland",              # (Linux) Support Wayland windowing system
  ]


[dev-dependencies]
# Dependencies for examples
bevy_panorbit_camera={ version = "0.9.0", features=["bevy_egui"] } 
bevy_egui="0.23"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level=3

